[package]
name = "stpro"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN"]
description = "A lightweight, high-performance SOCKS5 proxy server with DPI evasion (Rust port of byedpi)"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rand = { version = "0.8", features = ["std_rng", "getrandom"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
